f fixed missaligned getStartedButton

--- a/frontend/src/views/Home/Home.module.css
+++ b/frontend/src/views/Home/Home.module.css
@@ -18,5 +18,6 @@
   padding-left: 2rem !important;
   padding-right: 2rem !important;
 
+  align-items: baseline !important;
   text-transform: lowercase !important;
 }
